--- a/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
@@ -21,7 +21,7 @@
 	        android:text="@string/bank_payee_enter_name" 
             android:layout_marginRight="@dimen/forms_inner_padding"
             android:layout_marginTop="@dimen/groups_of_elements_padding"
-            android:layout_toLeftOf="@+id/help"
+			android:layout_alignParentLeft="true"
 	        style="@style/page_title"/>
 	    
 	     <TextView
